WIP: making a plot of the bump shape.

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -101,6 +101,15 @@
 
 \begin{figure}
     \begin{center}
+        \includegraphics[width=\columnwidth]{figures/peak-zoomin.pdf}
+    \end{center}
+    \caption{Shape of the 30 MSun peak inferred from O3.}
+    \label{fig:peak-zoomin}
+    \script{peak_zoomin.py}
+\end{figure}
+
+\begin{figure}
+    \begin{center}
         \includegraphics[width=\columnwidth]{figures/mock_observation_corner.pdf}
     \end{center}
     \caption{An example of our mock posteriors for a random detected event.}
